--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
 
       - name: Update lambdaFunction code
         run: |
-          aws lambda update-function-code --function-name userAddLambda --s3-bucket ${{secrets.S3_BUCKET}} --s3-key ${{ env.ARTIFACT_NAME }}.zip
+          aws lambda update-function-code --function-name userSignupLamda --s3-bucket ${{secrets.S3_BUCKET}} --s3-key ${{ env.ARTIFACT_NAME }}.zip
