changing verification api url from http to https

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build & Upload lamda
+name: Build and Upload lamda function
 
 env:
   ARTIFACT_NAME: userSignupLamda
@@ -24,9 +24,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.SECRETS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{ secrets.SECRETS_SECRET_ACCESS_KEY}}
+          aws-region: ${{ secrets.SECRETS_REGION }}
 
       - name: Build Deployment artifacts
         run: |
@@ -34,8 +34,8 @@ jobs:
 
       - name: Copy Artifacts to S3
         run: |
-          aws s3 cp ${{ env.ARTIFACT_NAME }}.zip s3://${{secrets.S3_BUCKET}}
+          aws s3 cp ${{ env.ARTIFACT_NAME }}.zip s3://${{secrets.SECRETS_S3_BUCKET}}
 
       - name: Update lambdaFunction code
         run: |
-          aws lambda update-function-code --function-name userSignupLamda --s3-bucket ${{secrets.S3_BUCKET}} --s3-key ${{ env.ARTIFACT_NAME }}.zip
+          aws lambda update-function-code --function-name userSignupLamda --s3-bucket ${{secrets.SECRETS_S3_BUCKET}} --s3-key ${{ env.ARTIFACT_NAME }}.zip
